added euclidean distance algortihm Ref T11

--- a/view/movies.pug
+++ b/view/movies.pug
@@ -10,11 +10,11 @@ block body
       p= movie.overview
       if username
         .rating
-          span(data-id= movie.id data-rating= 5) ☆
-          span(data-id= movie.id data-rating= 4) ☆
-          span(data-id= movie.id data-rating= 3) ☆
-          span(data-id= movie.id data-rating= 2) ☆
-          span(data-id= movie.id data-rating= 1) ☆
+          span(data-movieid= movie.id data-rating= 5) ☆
+          span(data-movieid= movie.id data-rating= 4) ☆
+          span(data-movieid= movie.id data-rating= 3) ☆
+          span(data-movieid= movie.id data-rating= 2) ☆
+          span(data-movieid= movie.id data-rating= 1) ☆
 
 
 
