--- a/view/users.pug
+++ b/view/users.pug
@@ -4,9 +4,9 @@ block body
   h1 Users
 
   each user in users
-    article.movie-holder
-      h4= user.username
-
+    a(href= `/user/${user.username}`)
+      article.movie-holder
+        h4= user.username
 
 
 
