added the manhattan distance algorithm

--- a/view/user.pug
+++ b/view/user.pug
@@ -18,5 +18,8 @@ block body
         td(colspan= 2) Euclidean distance:
         td= similarity.euclideanDistance.toFixed(2)
       tr
+        td(colspan= 2) Manhattan distance:
+        td= similarity.manhattanDistance.toFixed(2)
+      tr
         td(colspan= 2)= 'PCC:'
         td= similarity.pcc.toFixed(2)
