--- a/view/index.pug
+++ b/view/index.pug
@@ -1,6 +1,7 @@
 extends layout
 
 block body
-  h1 index
+  h1 Movie recommendation
   if username
-    h2= `hello ${username}`
+    h2= `Hello, ${username}`
+
