--- a/view/register.pug
+++ b/view/register.pug
@@ -1,11 +1,18 @@
 extends layout
 
 block body
-  form(action="/register" method="POST")
-    if error
-      h1= error
-    label(for="username") Username
-    input(type="text" name="username" id="username")
-    label(for="password") Password
-    input(type="password" name="password" id="password")
-    button(type="submit") Register
+  section.center-form
+    h1 Register
+
+    form(action="/register" method="POST")
+      if error
+        .error= error
+      .form-section
+        label(for="username") Username
+        input(type="text" class="form-control" name="username" id="username")
+      .form-section
+        label(for="password") Password
+        input(type="password" class="form-control" name="password" id="password")
+      .submit-section
+        button(type="submit" class="btn btn-primary") Register
+        a(href="/login") Login
