added specific movie page

--- a/view/index.pug
+++ b/view/index.pug
@@ -1,5 +1,6 @@
 extends layout
 
 block body
-
-
+  h1 Movie recommendation demo
+  p= `Total number of users registered: ${totalUsers}`
+  p= `Total number of reviews: ${totalReviews}`
