--- a/view/layout.pug
+++ b/view/layout.pug
@@ -21,24 +21,17 @@ html
             div(class="nav navbar-nav" id="main-collapse-navbar")
               .collapse.navbar-collapse
                 ul.nav.navbar-nav
-                  li
-                    a(href="/") Home
+                  li: a(href="/") Home
                   if username
-                    li
-                      a(href="/me") Profile
-                    li
-                      a(href="/movie") Movies
-                    li
-                      a(href="/user") Users
+                    li: a(href="/me") Profile
+                    li: a(href="/movie") Movies
+                    li: a(href="/user") Users
                   else
-                    li
-                      a(href="/login") Login
+                    li: a(href="/login") Login
                 if username
                   ul.nav.navbar-nav.navbar-right
-                    li
-                      a(href="/me")= `Hello ${username}`
-                    li
-                      a(href="/logout") Logout
+                    li: a(href="/me")= `Hello ${username}`
+                    li: a(href="/logout") Logout
     block body
 
     script(src=`/${asset('main.js')}`)
