added next/previous movie links

--- a/view/movie.pug
+++ b/view/movie.pug
@@ -17,5 +17,7 @@ block body
                 .error= error
               button(type="submit" class="btn btn-primary") Rate
 
+        a(href=`/movie/${prevMovie}` class="btn btn-default") Previous Movie
+        a(href=`/movie/${nextMovie}` class="btn btn-default") Next Movie
 
 
