--- a/view/profile.pug
+++ b/view/profile.pug
@@ -5,17 +5,20 @@ block body
     .row
       .col-xs-8
         h1= user.username
-        p= `Number of rated movies: ${user.reviews.length}`
+        p Number of rated movies:&nbsp;
+          b= user.reviews.length
     .row
       .col-xs-8
         h2 Rated movies
         if user.reviews
-          ol
+          ul.list-group
             each review in user.reviews
-              li.media
-                .media-left
-                  a(href=`/movie/${review.movieId}`)
-                    img(class='media-left-image' src=`${TMDB_IMG_BASE}/w640/${review.movie.poster_path}` alt='')
-                .media-body
-                  h4.media-heading: a(href=`/movie/${review.movieId}`)= review.movie.title
-                  p= `Rating: ${review.rating}`
+              li.list-group-item
+                .media
+                  .media-left
+                    a(href=`/movie/${review.movieId}`)
+                      img(class='media-left-image' src=`${TMDB_IMG_BASE}/w640/${review.movie.poster_path}` alt='Movie image...')
+                  .media-body
+                    h4.media-heading: a(href=`/movie/${review.movieId}`)= review.movie.title
+                    p Rating:&nbsp;
+                      b= review.rating
